# mbti

./: index.html  styles.css  test.html  test.js  theme.js  xNFx.html  xSFx.html  xSTx.html
selfhosted/: main.c  meson.build
